# BetelgeuseBackup

./: .bumpversion.cfg  Dockerfile  LICENSE  README.md  docker-compose.yaml  generate_release_notes.py  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/: pull_request_template.md
.github/workflows/: release.yml  tag.yml  tests.yml
scripts/: generate_release_notes.py
src/: main.py
tests/: test_main.py
