[metadata]
name = betelgeuse
version = 0.0.4
description = A Python client for the Betelgeuse Notion Manager
author = Gishant Singh
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    betelgeuse
install_requires =
    requests>=2
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
betelgeuse = py.typed

[flake8]
max-line-length = 160